testsuite/tests/properties/invalid_map/default_value/test.lkt
from common import FooNode, NumberNode

class ListNode: FooNode {
    @parse_field nb_list: ASTList[NumberNode]
    @exported fun prop(): Array[Entity[NumberNode]] =
        self.nb_list.map((x=12) => x)
}
